--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -15,3 +17,4 @@
     </div>
     {% endfor %}
 </div>
+  {% endblock content %}
